fixed another chat scrollbar issue

--- a/public/stylesheets/custom-scrollbar.css
+++ b/public/stylesheets/custom-scrollbar.css
@@ -2,7 +2,7 @@
 /* vertical scrollbar */
 .mCSB_container{
 	width:auto;
-	height: 230px;
+	height: 900px;
 	margin-right:30px;
 	overflow:hidden;
 }
